# ReSET

./: .gitignore  README.md  RSCENE.yml  deploy.py  pred_dynamics.py  pred_track_vit.py  pred_uncertainty.py  preprocess_play_data.py  pyproject.toml  record_dynamics_data.py  train.sh  train_example.sh  train_policy.py  utils.py
conf/: deploy.yaml  pred_dynamics.yaml  pred_track_vit.yaml  pred_uncertainty.yaml  preprocess_lerobot.yaml  preprocess_play_data.yaml  preprocess_track.yaml  record_dynamics_data.yaml  train_policy.yaml
conf/camera/: default.yaml  static_and_gripper.yaml
conf/dataset/: dynamics.yaml  human.yaml  preset.yaml  robot.yaml  robot_play.yaml
conf/encoder/: dino.yaml  resnet.yaml
conf/model/: DynamicsModel.yaml  FlowDecoder.yaml  LinearEstimator.yaml
conf/policy/: Diffusion.yaml  FlowPolicy.yaml  MPPIPolicy.yaml  OpenLoop.yaml  PI0.yaml  (+2 more)
data/: __init__.py  human_dataset.py  humanoid_dataset.py  robot_dataset.py
model/: __init__.py  dinov2_encoder.py  dynamics_model.py  ema_model.py  flow_decoder.py  module.py  normalizer.py  transformer_for_diffusion.py  uncertainty_estimator.py
policy/: __init__.py  diffusion_policy.py  flow_policy.py  flow_policy_new.py  load_policy.py  mppi_policy.py  open_loop.py  pi0.py  pi0_training_config.py  policy.py  preset_openloop.py  preset_policy.py
preprocess/: __init__.py  preprocess_lerobot.py  preprocess_track.py  utils.py
record/: __init__.py  gello_teleop.py  record_human.py  record_robot.py  utils.py
train/: pred_dynamics.py  pred_track_vit.py  pred_uncertainty.py  train_policy.py
(+7 files in other folders)
